--- a/ILEditor/UserTools/OutlineView.resx
+++ b/ILEditor/UserTools/OutlineView.resx
@@ -117,4 +117,68 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <metadata name="imageList1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>17, 17</value>
+  </metadata>
+  <data name="imageList1.ImageStream" mimetype="application/x-microsoft.net.object.binary.base64">
+    <value>
+        AAEAAAD/////AQAAAAAAAAAMAgAAAFdTeXN0ZW0uV2luZG93cy5Gb3JtcywgVmVyc2lvbj00LjAuMC4w
+        LCBDdWx0dXJlPW5ldXRyYWwsIFB1YmxpY0tleVRva2VuPWI3N2E1YzU2MTkzNGUwODkFAQAAACZTeXN0
+        ZW0uV2luZG93cy5Gb3Jtcy5JbWFnZUxpc3RTdHJlYW1lcgEAAAAERGF0YQcCAgAAAAkDAAAADwMAAACI
+        DAAAAk1TRnQBSQFMAgEBBgEAARABAAEQAQABEAEAARABAAT/AQkBAAj/AUIBTQE2AQQGAAE2AQQCAAEo
+        AwABQAMAASADAAEBAQABCAYAAQgYAAGAAgABgAMAAoABAAGAAwABgAEAAYABAAKAAgADwAEAAcAB3AHA
+        AQAB8AHKAaYBAAEzBQABMwEAATMBAAEzAQACMwIAAxYBAAMcAQADIgEAAykBAANVAQADTQEAA0IBAAM5
+        AQABgAF8Af8BAAJQAf8BAAGTAQAB1gEAAf8B7AHMAQABxgHWAe8BAAHWAucBAAGQAakBrQIAAf8BMwMA
+        AWYDAAGZAwABzAIAATMDAAIzAgABMwFmAgABMwGZAgABMwHMAgABMwH/AgABZgMAAWYBMwIAAmYCAAFm
+        AZkCAAFmAcwCAAFmAf8CAAGZAwABmQEzAgABmQFmAgACmQIAAZkBzAIAAZkB/wIAAcwDAAHMATMCAAHM
+        AWYCAAHMAZkCAALMAgABzAH/AgAB/wFmAgAB/wGZAgAB/wHMAQABMwH/AgAB/wEAATMBAAEzAQABZgEA
+        ATMBAAGZAQABMwEAAcwBAAEzAQAB/wEAAf8BMwIAAzMBAAIzAWYBAAIzAZkBAAIzAcwBAAIzAf8BAAEz
+        AWYCAAEzAWYBMwEAATMCZgEAATMBZgGZAQABMwFmAcwBAAEzAWYB/wEAATMBmQIAATMBmQEzAQABMwGZ
+        AWYBAAEzApkBAAEzAZkBzAEAATMBmQH/AQABMwHMAgABMwHMATMBAAEzAcwBZgEAATMBzAGZAQABMwLM
+        AQABMwHMAf8BAAEzAf8BMwEAATMB/wFmAQABMwH/AZkBAAEzAf8BzAEAATMC/wEAAWYDAAFmAQABMwEA
+        AWYBAAFmAQABZgEAAZkBAAFmAQABzAEAAWYBAAH/AQABZgEzAgABZgIzAQABZgEzAWYBAAFmATMBmQEA
+        AWYBMwHMAQABZgEzAf8BAAJmAgACZgEzAQADZgEAAmYBmQEAAmYBzAEAAWYBmQIAAWYBmQEzAQABZgGZ
+        AWYBAAFmApkBAAFmAZkBzAEAAWYBmQH/AQABZgHMAgABZgHMATMBAAFmAcwBmQEAAWYCzAEAAWYBzAH/
+        AQABZgH/AgABZgH/ATMBAAFmAf8BmQEAAWYB/wHMAQABzAEAAf8BAAH/AQABzAEAApkCAAGZATMBmQEA
+        AZkBAAGZAQABmQEAAcwBAAGZAwABmQIzAQABmQEAAWYBAAGZATMBzAEAAZkBAAH/AQABmQFmAgABmQFm
+        ATMBAAGZATMBZgEAAZkBZgGZAQABmQFmAcwBAAGZATMB/wEAApkBMwEAApkBZgEAA5kBAAKZAcwBAAKZ
+        Af8BAAGZAcwCAAGZAcwBMwEAAWYBzAFmAQABmQHMAZkBAAGZAswBAAGZAcwB/wEAAZkB/wIAAZkB/wEz
+        AQABmQHMAWYBAAGZAf8BmQEAAZkB/wHMAQABmQL/AQABzAMAAZkBAAEzAQABzAEAAWYBAAHMAQABmQEA
+        AcwBAAHMAQABmQEzAgABzAIzAQABzAEzAWYBAAHMATMBmQEAAcwBMwHMAQABzAEzAf8BAAHMAWYCAAHM
+        AWYBMwEAAZkCZgEAAcwBZgGZAQABzAFmAcwBAAGZAWYB/wEAAcwBmQIAAcwBmQEzAQABzAGZAWYBAAHM
+        ApkBAAHMAZkBzAEAAcwBmQH/AQACzAIAAswBMwEAAswBZgEAAswBmQEAA8wBAALMAf8BAAHMAf8CAAHM
+        Af8BMwEAAZkB/wFmAQABzAH/AZkBAAHMAf8BzAEAAcwC/wEAAcwBAAEzAQAB/wEAAWYBAAH/AQABmQEA
+        AcwBMwIAAf8CMwEAAf8BMwFmAQAB/wEzAZkBAAH/ATMBzAEAAf8BMwH/AQAB/wFmAgAB/wFmATMBAAHM
+        AmYBAAH/AWYBmQEAAf8BZgHMAQABzAFmAf8BAAH/AZkCAAH/AZkBMwEAAf8BmQFmAQAB/wKZAQAB/wGZ
+        AcwBAAH/AZkB/wEAAf8BzAIAAf8BzAEzAQAB/wHMAWYBAAH/AcwBmQEAAf8CzAEAAf8BzAH/AQAC/wEz
+        AQABzAH/AWYBAAL/AZkBAAL/AcwBAAJmAf8BAAFmAf8BZgEAAWYC/wEAAf8CZgEAAf8BZgH/AQAC/wFm
+        AQABIQEAAaUBAANfAQADdwEAA4YBAAOWAQADywEAA7IBAAPXAQAD3QEAA+MBAAPqAQAD8QEAA/gBAAHw
+        AfsB/wEAAaQCoAEAA4ADAAH/AgAB/wMAAv8BAAH/AwAB/wEAAf8BAAL/AgAD/wEABPUCAAT1AgAE9QQA
+        Af8BvAQHAfAlAARZAgAEUwIAAXUDUwMAAfMB7wH/BAAB/yUABFkCAARTAgABdQNTAfUCvAHwCAAB/wHw
+        AQgB9SAABFkCAARTAgABdQNTAQcCtAHzCAAB8wJ3AZggAASaAgAEmgIAARoDmgHuArQB9AgAAfQCdwEI
+        IQAB8gH0BAAC8wQAAfQB8gEAAf8B8QHzCgAB8wG7AfUhAAHyAfQEAALzBAAB9AHyDwAB8QH0IQAB8gHw
+        BPMCvATzAfAB8gEAAv8MAAHyAfMhAAH/BfMCvAXzAf8BAAH/AbwMAAEHAf8nAALzCAABBwwAAQcoAALz
+        CAABvAH0CgAB9AG8JwAB3AK6AdwHAAH/Ae8B/wgAAf8B7wH/JwABswKyAbMIAAH0Ae8B/wIAAvUCAAH/
+        Ae8B/ygAAbMCsgGzCQAB/wHvAe4BGwI4ARsBAAHzAf8pAAGzArIBswsAAf8BmQI4ARosAAH1AvQB9QwA
+        AfYCegH2KwAB/wEbAZoBlAHzAf8JAAH3AQcNAAsbAfQHAAHzAe0B9wHzCQAB9gEaA3oDFgEaAfUGAAH3
+        AgABBwoAAfQB8AsbAfQFAAHzAe0CEgKuAfcB8wQAAf8B8wGaBXoFFgGaAfMB/wMAAfEDAAEHCQAB8wGZ
+        AhsHGgIbAfQDAAHzAe0EEgSuAfcB8wIAAZoHegcWAZQEAAHxAwABBwgAAfMBmQsbAfQBAAH/Ae0GEgau
+        AfcB/wGaB3oHFgGUBQAB8QMAAQcHAAHzAZkCGwcaAhsB9AEAAfQHEgeuAfQBmgd6BxYBlAYAAfEDAAEH
+        BgAB8wGZCxsB9AEAAfQHEgeuAfQBmgd6BxYBlAcAAfEDAAEHBQAB8wGZAhsHGgIbAfQBAAH0BxIHrgH0
+        AZoHegcWAZQIAAHxAwABBwQAAfMBmQsbAfQBAAH0BxIHrgH0AZoHegcWAZQIAAHxAwABBwQAAfMBmQsb
+        AfQBAAH0BhIB6geuAfQBmgZ6AZkBkwYWAZQHAAHxAwABBwUAAfMBmQIbBxoCGwH0AQAB9AQSAeoB9wKW
+        AbsFrgH0AZoEegGZAbsCugG7AQcEFgGUBgAB8QMAAQcGAAHzAZkLGwH0AQAB9AISAeoB9waWAbsDrgH0
+        AZoBegGaAQgIugEHAZMBFgGUBQAB8QMAAQcHAAHzAZkCGwMaAhsBGgKZAfAB/wEAAfQB6gH3CpYBuwGu
+        AfQBGgG7DLoBuwG8BAAB8QMAAQcIAAHzAZkHGwEaAZkBvAH/AgAB/wG7DJYBuwL/AfQBuwq6AbsB9AH/
+        AwAB8QMAAQcJAAHzAZkHGwEaAbwBBwUAAfMBugiWAbsB9AUAAfUB8Aa6AfAB9QYAAfcCAAEHCgAB8wGZ
+        AfAG8QHwApkGAAH/AfMBugSWAbsB9AkAAf8B8wK7AfMB/wkAAfcBBwsAAfMLmQgAAf8B8gG6AbsB/wYA
+        AUIBTQE+BwABPgMAASgDAAFAAwABIAMAAQEBAAEBBgABARYAA/8BAAEMATAB8AEfBAABDAEwAeMB3wQA
+        AQwBMAEPAfAEAAEMATABDwHwBAABDAEwAQ8B8AQAAZ4BeQEfAfgEAAGeAXkB/wH8BAABgAEBAT8B/AQA
+        AYABAQE/AfwEAAH+AX8BvwH9BAAB/gF/AZ8B+QQAAfwBPwGPAfEEAAH8AT8BxgFjBAAB/AE/AeABJwQA
+        AfwBPwH4AT8EAAH8AT8B/AE/BAAB+AEfAfMB/wHgAQEB/AE/AeABBwHhAf8BgAEBAfABDwIAAeAB/wGA
+        AQEBwAEDAgAB8AF/AYABAQQAAfgBPwGAAQEEAAH8AR8BgAEBBAAB/gEPAYABAQQAAf8BBwGAAQEEAAH/
+        AQcBgAEBBAAB/gEPAYABAQQAAfwBHwGAAQEEAAH4AT8BgAEBBAAB8AF/AYABAwQAAeAB/wGAAQcBwAED
+        AeABBwHhAf8BgAEHAeABDwH4AR8B8wH/AYABBwH4AT8L
+</value>
+  </data>
 </root>
