Update button in outline

--- a/ILEditor/UserTools/OutlineView.resx
+++ b/ILEditor/UserTools/OutlineView.resx
@@ -125,7 +125,7 @@
         AAEAAAD/////AQAAAAAAAAAMAgAAAFdTeXN0ZW0uV2luZG93cy5Gb3JtcywgVmVyc2lvbj00LjAuMC4w
         LCBDdWx0dXJlPW5ldXRyYWwsIFB1YmxpY0tleVRva2VuPWI3N2E1YzU2MTkzNGUwODkFAQAAACZTeXN0
         ZW0uV2luZG93cy5Gb3Jtcy5JbWFnZUxpc3RTdHJlYW1lcgEAAAAERGF0YQcCAgAAAAkDAAAADwMAAACI
-        DAAAAk1TRnQBSQFMAgEBBgEAARABAAEQAQABEAEAARABAAT/AQkBAAj/AUIBTQE2AQQGAAE2AQQCAAEo
+        DAAAAk1TRnQBSQFMAgEBBgEAARgBAAEYAQABEAEAARABAAT/AQkBAAj/AUIBTQE2AQQGAAE2AQQCAAEo
         AwABQAMAASADAAEBAQABCAYAAQgYAAGAAgABgAMAAoABAAGAAwABgAEAAYABAAKAAgADwAEAAcAB3AHA
         AQAB8AHKAaYBAAEzBQABMwEAATMBAAEzAQACMwIAAxYBAAMcAQADIgEAAykBAANVAQADTQEAA0IBAAM5
         AQABgAF8Af8BAAJQAf8BAAGTAQAB1gEAAf8B7AHMAQABxgHWAe8BAAHWAucBAAGQAakBrQIAAf8BMwMA
@@ -153,14 +153,14 @@
         AcwBAAH/AZkB/wEAAf8BzAIAAf8BzAEzAQAB/wHMAWYBAAH/AcwBmQEAAf8CzAEAAf8BzAH/AQAC/wEz
         AQABzAH/AWYBAAL/AZkBAAL/AcwBAAJmAf8BAAFmAf8BZgEAAWYC/wEAAf8CZgEAAf8BZgH/AQAC/wFm
         AQABIQEAAaUBAANfAQADdwEAA4YBAAOWAQADywEAA7IBAAPXAQAD3QEAA+MBAAPqAQAD8QEAA/gBAAHw
-        AfsB/wEAAaQCoAEAA4ADAAH/AgAB/wMAAv8BAAH/AwAB/wEAAf8BAAL/AgAD/wEABPUCAAT1AgAE9QQA
-        Af8BvAQHAfAlAARZAgAEUwIAAXUDUwMAAfMB7wH/BAAB/yUABFkCAARTAgABdQNTAfUCvAHwCAAB/wHw
-        AQgB9SAABFkCAARTAgABdQNTAQcCtAHzCAAB8wJ3AZggAASaAgAEmgIAARoDmgHuArQB9AgAAfQCdwEI
-        IQAB8gH0BAAC8wQAAfQB8gEAAf8B8QHzCgAB8wG7AfUhAAHyAfQEAALzBAAB9AHyDwAB8QH0IQAB8gHw
+        AfsB/wEAAaQCoAEAA4ADAAH/AgAB/wMAAv8BAAH/AwAB/wEAAf8BAAL/AgAD/wEABP8CAAT/AgAE/wQA
+        Af8BvAQHAfAlAARZAgAEUwIAAXUDUwMAAfMB7wH/BAAB/yUABFkCAARTAgABdQNTAf8CvAHwCAAB/wHw
+        AQgB/yAABFkCAARTAgABdQNTAQcCtAHzCAAB8wJ3AZggAASaAgAEmgIAARoDmgG8ArQB9AgAAfQCdwEI
+        IQAB8gH0BAAC8wQAAfQB8gEAAf8B8QHzCgAB8wG7Af8hAAHyAfQEAALzBAAB9AHyDwAB8QH0IQAB8gHw
         BPMCvATzAfAB8gEAAv8MAAHyAfMhAAH/BfMCvAXzAf8BAAH/AbwMAAEHAf8nAALzCAABBwwAAQcoAALz
-        CAABvAH0CgAB9AG8JwAB3AK6AdwHAAH/Ae8B/wgAAf8B7wH/JwABswKyAbMIAAH0Ae8B/wIAAvUCAAH/
-        Ae8B/ygAAbMCsgGzCQAB/wHvAe4BGwI4ARsBAAHzAf8pAAGzArIBswsAAf8BmQI4ARosAAH1AvQB9QwA
-        AfYCegH2KwAB/wEbAZoBlAHzAf8JAAH3AQcNAAsbAfQHAAHzAe0B9wHzCQAB9gEaA3oDFgEaAfUGAAH3
+        CAABvAH0CgAB9AG8JwAB3AK6AdwHAAH/Ae8B/wgAAf8B7wH/JwABswKyAbMIAAH0Ae8B/wIAAv8CAAH/
+        Ae8B/ygAAbMCsgGzCQAB/wHvAbwBGwI4ARsBAAHzAf8pAAGzArIBswsAAf8BmQI4ARosAAH/AvQB/wwA
+        AfYCegH2KwAB/wEbAZoBlAHzAf8JAAH3AQcNAAsbAfQHAAHzAe0B9wHzCQAB9gEaA3oDFgEaAf8GAAH3
         AgABBwoAAfQB8AsbAfQFAAHzAe0CEgKuAfcB8wQAAf8B8wGaBXoFFgGaAfMB/wMAAfEDAAEHCQAB8wGZ
         AhsHGgIbAfQDAAHzAe0EEgSuAfcB8wIAAZoHegcWAZQEAAHxAwABBwgAAfMBmQsbAfQBAAH/Ae0GEgau
         AfcB/wGaB3oHFgGUBQAB8QMAAQcHAAHzAZkCGwcaAhsB9AEAAfQHEgeuAfQBmgd6BxYBlAYAAfEDAAEH
@@ -170,7 +170,7 @@
         AbsFrgH0AZoEegGZAbsCugG7AQcEFgGUBgAB8QMAAQcGAAHzAZkLGwH0AQAB9AISAeoB9waWAbsDrgH0
         AZoBegGaAQgIugEHAZMBFgGUBQAB8QMAAQcHAAHzAZkCGwMaAhsBGgKZAfAB/wEAAfQB6gH3CpYBuwGu
         AfQBGgG7DLoBuwG8BAAB8QMAAQcIAAHzAZkHGwEaAZkBvAH/AgAB/wG7DJYBuwL/AfQBuwq6AbsB9AH/
-        AwAB8QMAAQcJAAHzAZkHGwEaAbwBBwUAAfMBugiWAbsB9AUAAfUB8Aa6AfAB9QYAAfcCAAEHCgAB8wGZ
+        AwAB8QMAAQcJAAHzAZkHGwEaAbwBBwUAAfMBugiWAbsB9AUAAf8B8Aa6AfAB/wYAAfcCAAEHCgAB8wGZ
         AfAG8QHwApkGAAH/AfMBugSWAbsB9AkAAf8B8wK7AfMB/wkAAfcBBwsAAfMLmQgAAf8B8gG6AbsB/wYA
         AUIBTQE+BwABPgMAASgDAAFAAwABIAMAAQEBAAEBBgABARYAA/8BAAEMATAB8AEfBAABDAEwAeMB3wQA
         AQwBMAEPAfAEAAEMATABDwHwBAABDAEwAQ8B8AQAAZ4BeQEfAfgEAAGeAXkB/wH8BAABgAEBAT8B/AQA
@@ -181,4 +181,7 @@
         AeABBwHhAf8BgAEHAeABDwH4AR8B8wH/AYABBwH4AT8L
 </value>
   </data>
+  <metadata name="toolStrip1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>127, 17</value>
+  </metadata>
 </root>
