--- a/ILEditor/Properties/Resources.resx
+++ b/ILEditor/Properties/Resources.resx
@@ -235,7 +235,7 @@
   <data name="edit1" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\NewIcons\edit.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="divide-mathematical-sign" type="System.Resources.ResXFileRef, System.Windows.Forms">
+  <data name="comment_sign" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\NewIcons\divide-mathematical-sign.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
 </root>
